--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "^13.1.1",
+    "install": "^0.13.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
